Fix text on safari

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -25,6 +25,7 @@ span.colorText-red {
   );
   -webkit-background-clip: text;
   background-clip: text;
+  display: inline-block;
   -webkit-text-fill-color: transparent;
 }
 
@@ -37,6 +38,7 @@ span.colorText-blue {
   );
   -webkit-background-clip: text;
   background-clip: text;
+  display: inline-block;
   -webkit-text-fill-color: transparent;
 }
 
@@ -48,7 +50,9 @@ span.colorText-green {
   );
   -webkit-background-clip: text;
   background-clip: text;
+  display: inline-block;
   -webkit-text-fill-color: transparent;
+  overflow: visible;
 }
 
 .theme-switch-wrapper {
@@ -65,13 +69,15 @@ span.colorText-green {
 
 .switcher {
   background-image: url(../image/Sun.svg);
+  background-position: center;
+  background-repeat: no-repeat;
   bottom: 0;
   cursor: pointer;
   left: 0;
   position: absolute;
   right: 0;
   top: 0;
-  width: 42px;
+  width: 40px;
   height: 44px;
   opacity: 1;
   z-index: 10;
@@ -79,6 +85,8 @@ span.colorText-green {
 
 .switcher:before {
   background-image: url(../image/Moon.svg);
+  background-position: center;
+  background-repeat: no-repeat;
   content: '';
   bottom: 0;
   left: 0;
@@ -149,13 +157,18 @@ opacity: 1;
 }
 
 .phone-1, .bike-1, .map-1{
-  opacity: 0.05;
+  opacity: 0.08;
 }
 .phone-2, .bike-2, .map-2{
-  opacity: 0.06;
+  opacity: 0.1;
 }
 .phone-3, .bike-3, .map-3{
-  opacity: 0.08;
+  opacity: 0.13;
+}
+
+#typeText {
+  overflow-wrap: normal;
+  clear: left
 }
 
 
